Fix account redirection ; Fix z-index of account dropdown and make account dropdown keyboard accessible

--- a/src/static/stylesheets/defaults.scss
+++ b/src/static/stylesheets/defaults.scss
@@ -56,6 +56,7 @@ body,
   align-items: center;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .actions-container {
