--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -68,6 +68,8 @@ header {
 }
 
 .header-account {
+  @include elv-no-select;
+
   align-items: center;
   border: 0;
   cursor: pointer;
@@ -77,6 +79,7 @@ header {
   max-width: 15rem;
   padding: 0 $elv-spacing-m 0 $elv-spacing-s;
   width: 15rem;
+  z-index: 1000;
 
   &:hover {
     background: $elv-color-lightestgray;
